# m1test

./: Dockerfile  README.md  pyproject.toml  requirements.txt  start.py
data/: Binance-BTCBUSD-1d-01-Jan-2020-31-Dec-2021.csv
